--- a/index4.html
+++ b/index4.html
@@ -18,7 +18,7 @@
     <title>Quiz</title>
   </head>
   <body>
-    <div id="quiz" class="quiz">
+    <div id="quiz" class="quiz container">
       <div class="title">Quiz</div>
       <h3 id="category"></h3>
       <h2>
@@ -32,12 +32,12 @@
               <input
                 class="form-check-input"
                 type="radio"
-                name="flexRadioDefault"
-                id="firstButton"
+                name="answer"
+                id="answer1"
               />
               <label
                 class="form-check-label labl"
-                for="flexRadioDefault2"
+                for="answer1"
                 id="firstAnswer"
               >
               </label>
@@ -48,13 +48,10 @@
               <input
                 class="form-check-input"
                 type="radio"
-                name="flexRadioDefault"
+                name="answer"
+                id="answer2"
               />
-              <label
-                class="form-check-label"
-                for="flexRadioDefault2"
-                id="secondAnswer"
-              >
+              <label class="form-check-label" for="answer2" id="secondAnswer">
               </label>
             </div>
           </div>
@@ -65,13 +62,10 @@
               <input
                 class="form-check-input"
                 type="radio"
-                name="flexRadioDefault"
+                name="answer"
+                id="answer3"
               />
-              <label
-                class="form-check-label"
-                for="flexRadioDefault2"
-                id="thirdAnswer"
-              >
+              <label class="form-check-label" for="answer3" id="thirdAnswer">
               </label>
             </div>
           </div>
@@ -80,13 +74,10 @@
               <input
                 class="form-check-input"
                 type="radio"
-                name="flexRadioDefault"
+                name="answer"
+                id="answer4"
               />
-              <label
-                class="form-check-label"
-                for="flexRadioDefault2"
-                id="fourthAnswer"
-              >
+              <label class="form-check-label" for="answer4" id="fourthAnswer">
               </label>
             </div>
           </div>
